# challenge-agrobot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.lambda  Dockerfile.worker  Makefile  README.md  alembic.ini  cdk.json  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_composite_rules.py  003_metric_types_table.py
docs/: PRD.md
docs/designs/: weather-notifications.md
infra/: app.py  cdk.json
infra/stacks/: agrobot_stack.py  app_stack.py  data_stack.py  network_stack.py
scripts/: entrypoint.sh  localstack-init.sh  seed.py  simulate-cloud.sh  test-cloud.sh
simulator/: db_only.py  ingest.py
src/api/: app.py  deps.py  schemas.py  validators.py
src/api/middleware/: rate_limit.py
src/api/routers/: auth.py  dashboard.py  health.py  metric_types.py  rule_groups.py  rules.py
src/lambdas/dispatcher/: handler.py  local_runner.py
src/lambdas/matching/: handler.py  local_runner.py  parser.py
src/models/: __init__.py  alert_rule.py  latest_reading.py  metric_type.py  rule_group.py  user.py  weather_data.py
src/providers/: base.py  kapso.py  mock.py
src/shared/: config.py  constants.py  db.py  threshold.py
tests/: conftest.py
tests/integration/: test_api_auth.py  test_api_rule_groups.py  test_api_rules.py  test_health.py
tests/unit/: test_auth.py  test_composite_evaluation.py  test_cooldown.py  test_h3_conversion.py  test_matching_parser.py  test_notification_provider.py  test_rule_group_schemas.py  test_schemas.py  test_threshold.py
