[project]
name = "agrobot"
version = "0.1.0"
description = "Weather notification system with CDC-based event-driven architecture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "h3>=3.7.0",
    "PyJWT>=2.12.0",
    "pwdlib[bcrypt]>=0.2.0",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "aws-lambda-powertools>=2.30.0",
    "aws-xray-sdk>=2.12.0",
    "sentry-sdk[fastapi]>=1.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "moto[kinesis,sqs]>=5.0.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring database",
    "e2e: end-to-end tests requiring full stack",
]

[tool.ruff]
target-version = "py311"
line-length = 100
